# awx-plugins

./: .codecov.yml  .codespellrc  .coveragerc  .darglint  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc.toml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  nitpick-style.toml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci-cd.yml  ci.yml  github-actions-demo.yml  pip-tools.yml  reusable-linters.yml  reusable-tests.yml  reusable-tox.yml  scheduled-runs.yml
dependencies/: .gitignore  README.md
dependencies/direct/: .gitignore  README.md  build-docs.in  doctest-docs.in  linkcheck-docs.in  pip-compile-build-lock.in  py-constraints.in  py.in  spellcheck-docs.in
dependencies/lock-files/: .gitignore  README.md  build-dists-cp311-darwin-x86_64.txt  build-dists-cp312-darwin-arm64.txt  build-dists-cp312-darwin-x86_64.txt  build-dists-cp312-linux-x86_64.txt  build-dists-cp313-darwin-arm64.txt  build-dists-cp313-darwin-x86_64.txt  build-dists-cp313-linux-x86_64.txt  build-docs-cp311-darwin-arm64.txt  build-docs-cp311-darwin-x86_64.txt  build-docs-cp311-linux-x86_64.txt  build-docs-cp312-darwin-arm64.txt  build-docs-cp312-darwin-x86_64.txt  build-docs-cp312-linux-x86_64.txt  build-docs-cp313-darwin-arm64.txt  build-docs-cp313-darwin-x86_64.txt  build-docs-cp313-linux-x86_64.txt  coverage-docs-cp311-darwin-arm64.txt  coverage-docs-cp311-darwin-x86_64.txt  coverage-docs-cp311-linux-x86_64.txt  coverage-docs-cp312-darwin-arm64.txt  coverage-docs-cp312-darwin-x86_64.txt  coverage-docs-cp312-linux-x86_64.txt  coverage-docs-cp313-darwin-arm64.txt  coverage-docs-cp313-darwin-x86_64.txt  coverage-docs-cp313-linux-x86_64.txt  doctest-docs-cp311-darwin-arm64.txt  doctest-docs-cp311-darwin-x86_64.txt  doctest-docs-cp311-linux-x86_64.txt  doctest-docs-cp312-darwin-arm64.txt  doctest-docs-cp312-darwin-x86_64.txt  doctest-docs-cp312-linux-x86_64.txt  doctest-docs-cp313-darwin-arm64.txt  doctest-docs-cp313-linux-x86_64.txt  linkcheck-docs-cp311-darwin-arm64.txt  linkcheck-docs-cp311-linux-x86_64.txt  linkcheck-docs-cp312-darwin-arm64.txt  linkcheck-docs-cp312-darwin-x86_64.txt  linkcheck-docs-cp312-linux-x86_64.txt  (+65 more)
docs/: .gitignore  conf.py  credential-plugins.rst  index.md  inventory-plugins-templates.rst  inventory-plugins.rst  requirements.in  spelling_wordlist.txt
docs/_ext/: spelling_stub_ext.py
docs/contributing/: code_of_conduct.md  communication.md  release_guide.md
docs/pkg/: .gitignore
docs/pkg/_templates/: .gitignore  toc.rst.jinja
requirements/: requirements.in  tox-build-dists-cp311-darwin-x86_64.txt  tox-build-dists-cp311-win32-amd64.txt  tox-build-dists-cp312-darwin-x86_64.txt  tox-build-dists-cp312-win32-amd64.txt  tox-build-dists-cp313-darwin-x86_64.txt  tox-build-dists-cp313-win32-amd64.txt  tox-build-dists.in  tox-build-docs-cp311-darwin-arm64.txt  tox-build-docs-cp311-win32-amd64.txt  tox-build-docs-cp312-linux-x86_64.txt  tox-build-docs-cp312-win32-amd64.txt  tox-build-docs-cp313-linux-x86_64.txt  tox-build-docs-cp313-win32-amd64.txt  tox-docs.in  tox-linkcheck-docs-cp311-darwin-arm64.txt  tox-linkcheck-docs-cp311-linux-x86_64.txt  tox-linkcheck-docs-cp311-win32-amd64.txt  tox-linkcheck-docs-cp312-linux-x86_64.txt  tox-linkcheck-docs-cp312-win32-amd64.txt  tox-linkcheck-docs-cp313-darwin-x86_64.txt  tox-linkcheck-docs-cp313-linux-x86_64.txt  tox-linkcheck-docs-cp313-win32-amd64.txt  tox-linkcheck-docs.in  tox-metadata-validation-cp311-darwin-arm64.txt  tox-metadata-validation-cp311-linux-x86_64.txt  tox-metadata-validation-cp311-win32-amd64.txt  tox-metadata-validation-cp312-darwin-x86_64.txt  tox-metadata-validation-cp312-linux-x86_64.txt  tox-metadata-validation-cp312-win32-amd64.txt  tox-metadata-validation-cp313-darwin-arm64.txt  tox-metadata-validation-cp313-linux-x86_64.txt  tox-metadata-validation-cp313-win32-amd64.txt  tox-metadata-validation.in  tox-pip-compile-build-lock-cp311-darwin-arm64.txt  tox-pip-compile-build-lock-cp311-win32-amd64.txt  tox-pip-compile-build-lock-cp312-darwin-x86_64.txt  tox-pip-compile-build-lock-cp312-win32-amd64.txt  tox-pip-compile-build-lock-cp313-darwin-x86_64.txt  tox-pip-compile-build-lock-cp313-win32-amd64.txt  (+46 more)
src/awx/plugins/credentials/x/: api.py
src/awx_plugins/credentials/: aim.py  aws_assumerole.py  aws_secretsmanager.py  azure_kv.py  centrify_vault.py  conjur.py  dsv.py  hashivault.py  injectors.py  plugin.py  plugins.py  py.typed  tss.py
src/awx_plugins/credentials/x/: api.py
src/awx_plugins/inventory/: plugins.py  py.typed
tests/: credential_plugins_test.py  importable_test.py  test_credential_plugins.py
